--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
 .barranav{
     background-color: blue;
 }
+
+.titulogaleria{
+    padding-top: 20px;
+    padding-bottom: 10px;
+    text-align: center;
+}
